feat(attachments): add mimeTypeCategory filter + video preview and thumbnails (#266)
ref: CO-3764
